removed intro height to prevent overflow of content when zooming, added some outline focus to the form inputs

--- a/style.css
+++ b/style.css
@@ -7,13 +7,12 @@
   background-repeat: no-repeat;
   background-position: center;
   background-color: #fff;
-  height: 80vh;
   justify-content: center;
   align-items: center;
+  padding: 3rem;
 }
 
 .intro {
-  position: relative;
   margin-bottom: 3vh;
   margin-left: 1vh;
   margin-right: 1vh;
@@ -35,7 +34,7 @@ h1 {
   display: flex;
   color: #091e42;
   font-weight: 800;
-  font-size: 48px;
+  font-size: 43px;
   margin: 1px;
 }
 
