--- a/works.css
+++ b/works.css
@@ -56,7 +56,7 @@ ul {
 
 @media only screen and (max-width: 600px) {
   .card-img {
-    width: 90%;
+    width: 100%;
     height: 100%;
   }
 
@@ -265,7 +265,11 @@ ul {
   margin-bottom: 1rem;
   border-radius: 9px;
   border: 1px solid rgb(206, 218, 216);
-  padding-left: 5px;
+  padding-left: 10px;
+}
+
+.name-email:focus {
+  outline: 6px solid rgba(0, 0, 0, 0.2)
 }
 
 #message {
@@ -273,7 +277,12 @@ ul {
   margin-bottom: 1rem;
   border-radius: 9px;
   border: 1px solid rgb(206, 218, 216);
-  padding-left: 5px;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+#message:focus {
+  outline: 6px solid rgba(0, 0, 0, 0.2)
 }
 
 .form-button {
